# veyanet-decision-gate

./: DEVPOST_SUBMISSION.md  GITHUB_UPLOAD_STEPS.md  LICENSE  LINK_CHECKLIST.md  NOTICE.md  README.md  SECURITY.md  YOUTUBE_VIDEO_GUIDE.md  index.html  pyproject.toml
.github/: CODEOWNERS
presentation/: VeyaNet_Decision_Gate_YouTube_Narration.txt
src/veyanet_decision_gate/: __init__.py  classifier.py  cli.py  gate.py  models.py
src/veyanet_decision_gate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_classifier.py  test_gate.py  test_integration.py
