[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veyanet-decision-gate"
version = "0.1.0"
description = "VeyaNet Decision Gate — supervised PASS/REVIEW/BLOCK uncertainty routing demo"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["decision-gate", "uncertainty", "routing", "supervised", "safety"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.scripts]
vdg-demo = "veyanet_decision_gate.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py39"
